# ECL_Analysis

./: .coverage  .coveragerc  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  FEATURE_IMPLEMENTATION_PLAN.md  FEATURE_IMPLEMENTATION_PLAN_V2.md  IMPROVEMENT_PLAN.md  MANIFEST.in  Makefile  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REFACTORING_PLAN.md  benchmark_performance.py  brightness_analysis.py  brightness_analyzer_settings.json  brightness_sorcerer.py  launch_modern.py  legacy_main.py  main.py  main_legacy.py  main_new.py  performance_demo.py  plot_brightness.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements-test.txt  requirements.txt  run_app.py  setup.py
.github/workflows/: ci.yml
brightness_sorcerer/: README.md  __init__.py  constants.py
brightness_sorcerer/analysis/: exporter.py
config/: brightness_analyzer_settings.backup.json
docs/: CLEANUP_SUMMARY.md  PROJECT_SPECIFICATION.md  TESTING.md  capture_metadata_schema.md  iphone_capture_pipeline_review.md  metadata_ingest_execution_plan.md
ecl_analysis/: __init__.py  analysis_core.py  app.py  audio.py  cache.py  constants.py  dependencies.py  roi_geometry.py  ui_theme.py  video_analyzer.py  workers.py
src/: analysis.py  audio.py  ui.py  utils.py
tests/: __init__.py  conftest.py
tools/: capture_inbox_manifest.example.json  ingest_capture_inbox.py  mask_review_manifest.example.json  real_video_review_manifest.example.json  run_mask_review.py  run_real_video_review.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
(+127 files in other folders)
