[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecl-analysis"
version = "0.1.0"
description = "Video brightness analysis tool for electrochemiluminescence (ECL) experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt5>=5.15.0",
    "opencv-python>=4.5.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
audio = [
    "pygame>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]
interactive-plots = [
    "plotly>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
brightness-sorcerer = "ecl_analysis.app:run_app"

[tool.setuptools.packages.find]
include = ["ecl_analysis*"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401", "F841", "W605"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "performance: marks performance-oriented tests.",
]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    "ignore:Deprecated call to .*declare_namespace.*:DeprecationWarning",
]
